--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -261,7 +261,7 @@
       </section>
   
       <section class="card" id="rings">
-  <h2>3. Polynomial Rings in FHE (Why They Matter)</h2>
+  <h2>Polynomial Rings in FHE (Why They Matter)</h2>
 
   <p>
     Modern FHE schemes are built on the <strong>Ring-LWE (RLWE)</strong> problem. Instead of encrypting
