--- a/readings/arXiv-2111.06833.html
+++ b/readings/arXiv-2111.06833.html
@@ -384,7 +384,7 @@ which correctly recovers the true frequency in expectation.
 <!-- 3.2 Protocol for a Small Domain -->
 <!-- ========================================================= -->
 
-<section id="small-domain">
+<!-- <section id="small-domain">
   <h3>3.2 Protocol for a Small Domain (Shuffle Model)</h3>
 
   <p>
@@ -570,7 +570,7 @@ which correctly recovers the true frequency in expectation.
 </ul>
 
 
-</section>
+</section> -->
 
     <section id="small-domain-protocol">
   <h2>Small-Domain Shuffle Protocol (Core Construction)</h2>
